changed ui and added work experience and grade result

--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,6 @@ body {
 
 @layer components {
   .section-title {
-    @apply text-gray-400 font-bold;
+    @apply text-gray-700 uppercase tracking-widest;
   }
 }
